<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="305dp"
                android:background="@drawable/top_bg"
                android:orientation="vertical"
                android:paddingTop="75dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Welcome to"
                    android:textColor="#fff"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20sp"
                    android:text="Sign Up"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-100dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_card_background"
                    android:orientation="vertical">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="7dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="16dp"
                        android:background="@drawable/delete_indirctor_shape" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fullName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/round_person_24"
                            android:drawablePadding="10dp"
                            android:hint="Full Name"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/phone"
                            android:drawablePadding="10dp"
                            android:hint="@string/phone_number"
                            android:importantForAutofill="yes"
                            android:inputType="number"
                            android:maxLength="11" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_email"
                            android:drawablePadding="10dp"
                            android:hint="@string/email"
                            android:importantForAutofill="yes"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/round_key_24"
                            android:drawablePadding="10dp"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLength="12" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/round_key_24"
                            android:drawablePadding="10dp"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:maxLength="12" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:id="@+id/signupBtn"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/btn_bg"
                            android:gravity="center"
                            android:text="Sign Up"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <ProgressBar
                            android:id="@+id/progressBar"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center"
                            android:theme="@style/ProgressBarBlack"
                            android:visibility="invisible" />

                    </FrameLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/mainLayout"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="30dp">

                        <TextView
                            android:id="@+id/text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginLeft="80dp"
                            android:text="@string/already_member"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/userLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:layout_toRightOf="@id/text"
                            android:text="@string/login"
                            android:textColor="@color/royal_blue_dark"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="4dp"
                            android:layout_toRightOf="@id/userLogin"
                            android:text="@string/here"
                            android:textSize="15sp" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="32dp" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/poweredByLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainLayout"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="110dp">

            <TextView
                android:id="@+id/poweredByTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginLeft="80dp"
                android:text="@string/powered_by"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/muslim_telecom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_toRightOf="@id/poweredByTxt"
                android:text="@string/app_name"
                android:textColor="@color/royal_blue_dark"
                android:textSize="20dp"
                android:textStyle="bold" />


        </RelativeLayout>

    </RelativeLayout>

</ScrollView>